fix: module-editor is properly scrollable, scrollbar styling

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -88,3 +88,21 @@
     @apply font-sans;
   }
 }
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--app-border) transparent;
+}
+
+*::-webkit-scrollbar {
+  width: 6px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--app-border);
+  border-radius: 3px;
+}
